--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,3 +1,7 @@
+*{
+  background-color: bisque;
+}
+
 html {
   font-size: 14px;
   min-height: 100%;
@@ -9,6 +13,26 @@ html {
   }
 }
 
+div h1{
+  text-decoration: underline;
+  text-align: center;
+}
+div p{
+  float: left;
+    margin: 2%;
+    padding: 2%;
+    border-radius: 10px;
+    background-color: rgb(56, 168, 135);
+}
+
+div a{
+  float: left;
+    margin: 2%;
+    padding: 2%;
+    border-radius: 10px;
+    background-color: rgb(56, 168, 135);
+}
+
 body {
   margin: 10px;
   padding: 10px;
@@ -16,6 +40,7 @@ body {
 
 
 footer {
+  clear: both;
   margin-top: 10px;
   padding: 10px;
   background-color: #f8f9fa;
