--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -13,31 +13,46 @@ html {
   }
 }
 
-div h1{
+h1{
   text-decoration: underline;
   text-align: center;
-}
-div p{
-  float: left;
-    margin: 2%;
-    padding: 2%;
-    border-radius: 10px;
-    background-color: rgb(56, 168, 135);
+  box-shadow: 5px 5px 5px black;
 }
 
-div a{
-  float: left;
-    margin: 2%;
-    padding: 2%;
-    border-radius: 10px;
-    background-color: rgb(56, 168, 135);
+div div {
+  width: 98%;
+  height: auto;
+  margin: 1%;
+  margin-left: 0.1%;
+  margin-right: 1%;
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: bisque;
+  padding: 1%;
+  box-shadow: 5px 5px 5px black
+  ;
+}
+
+div div p, a{
+  font-size: large;
+}
+div p{
+  text-decoration: double;
+  text-decoration: underline;
+  
+}
+  
+
+
+div div p{
+  text-transform: unset;
+  font-size: large;
 }
 
 body {
   margin: 10px;
   padding: 10px;
 }
-
 
 footer {
   clear: both;
