--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -16,37 +16,64 @@ html {
 h1{
   text-decoration: underline;
   text-align: center;
-  box-shadow: 5px 5px 5px black;
+  letter-spacing: 0.2cap;
+  font-family: fantasy;
 }
 
 div div {
-  width: 98%;
-  height: auto;
+  width: 20%;
+  height: 20%;
   margin: 1%;
-  margin-left: 0.1%;
   margin-right: 1%;
   border: 1px solid black;
-  border-radius: 10px;
   background-color: bisque;
   padding: 1%;
-  box-shadow: 5px 5px 5px black
-  ;
+  box-shadow: 5px 5px 5px black;
+  float: left;
 }
 
 div div p, a{
   font-size: large;
-}
-div p{
-  text-decoration: double;
-  text-decoration: underline;
-  
-}
-  
-
-
-div div p{
   text-transform: unset;
-  font-size: large;
+  text-decoration: double;
+}
+
+section div p{
+  text-decoration: none;
+  color: black;
+  font-size: 15px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  float: left;
+  margin: 1%;
+  padding: 1%;
+  border-radius: 10px;
+  background-color: rgb(153, 117, 73);
+}
+
+section div img{
+  float:right;
+  border: solid black 5px 5px 5px 5px;
+}
+
+section div ul h3{
+  background-color: rgb(153, 117, 73);
+}
+
+section div ul{
+  background-color: rgb(153, 117, 73);
+  clear: both;
+  margin: 0.5%;
+  padding: 1%;
+  width: 20%;
+  height: 20%;
+}
+
+section div ul li{
+  background-color: rgb(153, 117, 73);
+}
+
+section div ul li a{
+  background-color: rgb(153, 117, 73);
 }
 
 body {
