--- a/Views/Home/infoDiscos.cshtml
+++ b/Views/Home/infoDiscos.cshtml
@@ -7,6 +7,7 @@
 </div>
 
 <div>
+<img src = /@ViewBag.disco.foto alt = @ViewBag.disco.nombre>
 <ul>
 <h3>TEMAS:</h3>
 @foreach(string tema in @ViewBag.temas)
@@ -14,7 +15,11 @@
     <li><a>@tema</a></li>
 }
 </ul>
-<img src = /@ViewBag.disco.foto alt = @ViewBag.disco.nombre>
 </div>
 </section>
+
+<section class = "uno">
+<div>
 <a href='@Url.Action("Index","Home")' alt = "Volver a la pag principal"> Volver a la pag principal</a>
+</div>
+</section>
